Bug 449473 - "Icons to use" setting for month view and agenda view has no effect
Summary: "Icons to use" setting for month view and agenda view has no effect
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: monthview (other bugs)
Version First Reported In: 5.19.1
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-01 19:44 UTC by Michael Büker
Modified: 2022-03-20 16:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Büker 2022-02-01 19:44:34 UTC
SUMMARY

In korganizer Settings --> Views --> Month View (and Agenda View), it's possible to set the "Icons to use" for displayed events/todos/journals. However, these settings have no effect. They do not change the icons displayed in the month view (or agenda view), they are not saved in ~/.config/korganizerrc, and they are reset after restarting korganizer.


STEPS TO REPRODUCE

1. create calendar events with certain attributes (e.g. recurrence, alarm) and view them in month view (or agenda view)
2. change the icons to be displayed in Settings --> Views --> Month View (and Agenda View) --> Icons to use

OBSERVED RESULT
The icons displayed in the month view (or agenda view) do not change. Additionally, after restarting korganizer, the settings made manually are lost and reset.

EXPECTED RESULT
The icons should change according to the selection, the setting should be preserved, and (presumably) saved in ~/.config/korganizerrc.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kubuntu 21.10
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.2 (built against 5.15.2)

ADDITIONAL INFORMATION
Searching the KDE source code for adjacent settings in ~/.config/korganizerrc (like ShowJournalsMonthView), there seems to be no code to even save these "Icons to use" settings, so maybe the feature is not fully implemented?
Comment 1 Michael Büker 2022-02-01 20:52:24 UTC
Confirmed for:

- korganizer 5.19.1
- KDE Plasma 5.23.90
- KDE Frameworks 5.90.0
- QT 5.15.2

from Kubuntu 22.04 daily build live system.
Comment 2 Michael Büker 2022-02-01 21:33:52 UTC
Some more testing has shown:

- latest unaffected version tested was 4.14.1
- earliest affected version tested was 5.1.3
Comment 3 Bug Janitor Service 2022-03-18 01:31:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/korganizer/-/merge_requests/67
Comment 4 gjditchfield 2022-03-20 15:39:54 UTC
Git commit 23fb3b25a44ecffdad17dd44ddbac42fc0ec650f by Glen Ditchfield, on behalf of Glen Ditchfield.
Committed on 19/03/2022 at 19:04.
Pushed by gditchfield into branch 'release/22.04'.

Save the agenda and month views' "icons to use" settings

M  +6    -2    src/prefs/koprefsdialogviews.cpp
M  +1    -0    src/prefs/koprefsdialogviews.h

https://invent.kde.org/pim/korganizer/commit/23fb3b25a44ecffdad17dd44ddbac42fc0ec650f
Comment 5 gjditchfield 2022-03-20 16:52:26 UTC
Git commit c504ebbdb1adfad2f4e954ed842b6fdb2d28b955 by Glen Ditchfield.
Committed on 20/03/2022 at 16:51.
Pushed by gditchfield into branch 'master'.

Save the agenda and month views' "icons to use" settings

M  +6    -2    src/prefs/koprefsdialogviews.cpp
M  +1    -0    src/prefs/koprefsdialogviews.h

https://invent.kde.org/pim/korganizer/commit/c504ebbdb1adfad2f4e954ed842b6fdb2d28b955