Save the agenda and month views' "icons to use" settings

BUG: 449473